* doc/invoke.texi: Add -maltivec, -mno-altivec, and -mabi=altivec 	for rs6000.
	* config/rs6000/rs6000.h (MASK_ALTIVEC): New.
	(TARGET_ALTIVEC): New.
	(TARGET_SWITCHES): Add altivec.
	(FIRST_PSEUDO_REGISTER): Change to 109.
	(CALL_USED_REGISTERS): Same.
	(FIRST_ALTIVEC_REGNO): New.
	(LAST_ALTIVEC_REGNO): New.
	(ALTIVEC_REGNO_P): New.
	(UNITS_PER_ALTIVEC_WORD): New.
	(ALTIVEC_VECTOR_MODE): New.
	(FIXED_REGISTERS): Add altivec registers.
	(REG_ALLOC_ORDER): Same.
	(HARD_REGNO_NREGS): Adjust for altivec registers.
	(HARD_REGNO_MODE_OK): Same.
	(MODES_TIEABLE_P): Same.
	(REGISTER_MOVE_COST): Same.
	(REGNO_REG_CLASS): Same.
	(reg_class): Add ALTIVEC_REGS.
	(REG_CLASS_NAMES): Same.
	(REG_CLASS_CONTENTS): Same.
	(REG_CLASS_FROM_LETTER): Add 'v' constraint for ALTIVEC_REGS.
	(ALTIVEC_ARG_RETURN): New.
	(FUNCTION_VALUE): Handle VECTOR_TYPE.
	(LIBCALL_VALUE): Handle altivec vector modes.
	(VECTOR_MODE_SUPPORTED_P): New.
	(ALTIVEC_ARG_MIN_REG): New.
	(ALTIVEC_ARG_MAX_REG): New.
	(ALTIVEC_ARG_NUM_REG): New.
	(FUNCTION_VALUE_REGNO_P): Return true for altivec return register.
	(FUNCTION_ARG_REGNO_P): Support passing args in altivec registers.
	(REGISTER_NAMES): Add altivec regs.
	(DEBUG_REGISTER_NAMES): Same.
	(ADDITIONAL_REGISTER_NAMES): Same.
	(rs6000_builtins): New.
	(MD_EXPAND_BUILTIN): New.
	(MD_INIT_BUILTINS): New.
	(LEGITIMATE_OFFSET_ADDRESS_P): This addressing mode is not valid
	for AltiVec instructions.
	(LEGITIMATE_LO_SUM_ADDRESS_P): Same.
	(HARD_REGNO_MODE_OK): Altivec modes can only go in altivec
	registers.
	(SECONDARY_MEMORY_NEEDED): We need memory to copy vector modes.
	(TARGET_SWITCHES): Add no-altivec.
	(DATA_ALIGNMENT): Align vectors to 128 bits.
	(TARGET_OPTIONS): Add abi= option.
	Add rs6000_abi_string extern.
	(LOCAL_ALIGNMENT): New.
	(CPP_CPU_SPEC): Define __ALTIVEC__ when -maltivec.
	(MASK_ALTIVEC_ABI): New.
	(TARGET_ALTIVEC_ABI): New.
	(CONDITIONAL_REGISTER_USAGE): Set first 20 AltiVec registers to
	call-saved.
	(STACK_BOUNDARY): Adjust for altivec.
	(BIGG

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -37,7 +37,7 @@
 
 ;; Define an insn type attribute.  This is used in function unit delay
 ;; computations.
-(define_attr "type" "integer,load,store,fpload,fpstore,imul,lmul,idiv,ldiv,branch,compare,cr_logical,delayed_compare,fpcompare,mtjmpr,fp,dmul,sdiv,ddiv,ssqrt,dsqrt,jmpreg"
+(define_attr "type" "integer,load,store,fpload,fpstore,imul,lmul,idiv,ldiv,branch,compare,cr_logical,delayed_compare,fpcompare,mtjmpr,fp,dmul,sdiv,ddiv,ssqrt,dsqrt,jmpreg,altivec"
   (const_string "integer"))
 
 ;; Length (in bytes).
@@ -13361,3 +13361,936 @@
     emit_move_insn (gen_rtx_REG (Pmode, LINK_REGISTER_REGNUM), operands[0]);
   DONE;
 }")
+
+;; AltiVec patterns
+
+;; Generic LVX load instruction.
+(define_insn "altivec_lvx"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+	(match_operand:V4SI 1 "memory_operand" "m"))]
+  "TARGET_ALTIVEC"
+  "lvx\t%0,%y1"
+  [(set_attr "type" "altivec")])
+
+;; Generic STVX store instruction.
+(define_insn "altivec_stvx"
+  [(set (match_operand:V4SI 0 "memory_operand" "=m")
+	(match_operand:V4SI 1 "register_operand" "v"))]
+  "TARGET_ALTIVEC"
+  "stvx\t%1,%y0"
+  [(set_attr "type" "altivec")])
+
+;; Vector move instructions.
+(define_expand "movv4si"
+  [(set (match_operand:V4SI 0 "nonimmediate_operand" "")
+	(match_operand:V4SI 1 "any_operand" ""))]
+  "TARGET_ALTIVEC"
+  "{ rs6000_emit_move (operands[0], operands[1], V4SImode); DONE; }")
+
+(define_insn "*movv4si_internal"
+  [(set (match_operand:V4SI 0 "nonimmediate_operand" "=m,v,v")
+	(match_operand:V4SI 1 "input_operand" "v,m,v"))]
+  "TARGET_ALTIVEC"
+  "@
+   stvx\t%1,%y0
+   ldvx\t%0,%y1
+   vor\t%0,%1,%1"
+  [(set_attr "type" "altivec")])
+
+(define_expand "movv8hi"
+  [(set (match_operand:V8HI 0 "nonimmediate_operand" "")
+	(match_operand:V8HI 1 "any_operand" ""))]
+  "TARGET_ALTIVEC"
+  "{ rs6000_emit_move (operands[0], operands[1], V8HImode); DONE; }")
+
+(define_insn "*movv8hi_internal1"
+  [(set (match_operand:V8HI 0 "nonimmediate_operand" "=m,v,v")
+	(match_operand:V8HI 1 "input_operand" "v,m,v"))]
+  "TARGET_ALTIVEC"
+  "@
+   stvx\t%1,%y0
+   ldvx\t%0,%y1
+   vor\t%0,%1,%1"
+  [(set_attr "type" "altivec")])
+
+(define_expand "movv16qi"
+  [(set (match_operand:V16QI 0 "nonimmediate_operand" "")
+	(match_operand:V16QI 1 "any_operand" ""))]
+  "TARGET_ALTIVEC"
+  "{ rs6000_emit_move (operands[0], operands[1], V16QImode); DONE; }")
+
+(define_insn "*movv16qi_internal1"
+  [(set (match_operand:V16QI 0 "nonimmediate_operand" "=m,v,v")
+	(match_operand:V16QI 1 "input_operand" "v,m,v"))]
+  "TARGET_ALTIVEC"
+  "@
+   stvx\t%1,%y0
+   ldvx\t%0,%y1
+   vor\t%0,%1,%1"
+  [(set_attr "type" "altivec")])
+
+(define_expand "movv4sf"
+  [(set (match_operand:V4SF 0 "nonimmediate_operand" "")
+	(match_operand:V4SF 1 "any_operand" ""))]
+  "TARGET_ALTIVEC"
+  "{ rs6000_emit_move (operands[0], operands[1], V4SFmode); DONE; }")
+
+(define_insn "*movv4sf_internal1"
+  [(set (match_operand:V4SF 0 "nonimmediate_operand" "=m,v,v")
+	(match_operand:V4SF 1 "input_operand" "v,m,v"))]
+  "TARGET_ALTIVEC"
+  "@
+   stvx\t%1,%y0
+   ldvx\t%0,%y1
+   vor\t%0,%1,%1"
+  [(set_attr "type" "altivec")])
+
+;; Simple binary operations.
+
+(define_insn "altivec_vaddubm"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 31))]
+  "TARGET_ALTIVEC"
+  "vaddubm\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vadduhm"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 32))]
+  "TARGET_ALTIVEC"
+  "vadduhm\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vadduwm"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 33))]
+  "TARGET_ALTIVEC"
+  "vadduwm\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vaddfp"
+  [(set (match_operand:V4SF 0 "register_operand" "=v")
+        (unspec:V4SF [(match_operand:V4SF 1 "register_operand" "v")
+                      (match_operand:V4SF 2 "register_operand" "v")] 34))]
+  "TARGET_ALTIVEC"
+  "vaddfp\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vaddcuw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 35))]
+  "TARGET_ALTIVEC"
+  "vaddcuw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vaddubs"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 36))]
+  "TARGET_ALTIVEC"
+  "vaddubs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vaddsbs"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 37))]
+  "TARGET_ALTIVEC"
+  "vaddsbs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vadduhs"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 38))]
+  "TARGET_ALTIVEC"
+  "vadduhs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vaddshs"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 39))]
+  "TARGET_ALTIVEC"
+  "vaddshs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vadduws"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 40))]
+  "TARGET_ALTIVEC"
+  "vadduws\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vaddsws"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 41))]
+  "TARGET_ALTIVEC"
+  "vaddsws\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vand"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 42))]
+  "TARGET_ALTIVEC"
+  "vand\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vandc"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 43))]
+  "TARGET_ALTIVEC"
+  "vandc\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vavgub"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 44))]
+  "TARGET_ALTIVEC"
+  "vavgub\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vavgsb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 45))]
+  "TARGET_ALTIVEC"
+  "vavgsb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vavguh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 46))]
+  "TARGET_ALTIVEC"
+  "vavguh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vavgsh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 47))]
+  "TARGET_ALTIVEC"
+  "vavgsh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vavguw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 48))]
+  "TARGET_ALTIVEC"
+  "vavguw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vavgsw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 49))]
+  "TARGET_ALTIVEC"
+  "vavgsw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpbfp"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SF 1 "register_operand" "v")
+                      (match_operand:V4SF 2 "register_operand" "v")] 50))]
+  "TARGET_ALTIVEC"
+  "vcmpbfp\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpequb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 51))]
+  "TARGET_ALTIVEC"
+  "vcmpequb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpequh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 52))]
+  "TARGET_ALTIVEC"
+  "vcmpequh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpequw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 53))]
+  "TARGET_ALTIVEC"
+  "vcmpequw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpeqfp"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SF 1 "register_operand" "v")
+                      (match_operand:V4SF 2 "register_operand" "v")] 54))]
+  "TARGET_ALTIVEC"
+  "vcmpeqfp\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpgefp"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SF 1 "register_operand" "v")
+                      (match_operand:V4SF 2 "register_operand" "v")] 55))]
+  "TARGET_ALTIVEC"
+  "vcmpgefp\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpgtub"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 56))]
+  "TARGET_ALTIVEC"
+  "vcmpgtub\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpgtsb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 57))]
+  "TARGET_ALTIVEC"
+  "vcmpgtsb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpgtuh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 58))]
+  "TARGET_ALTIVEC"
+  "vcmpgtuh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpgtsh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 59))]
+  "TARGET_ALTIVEC"
+  "vcmpgtsh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpgtuw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 60))]
+  "TARGET_ALTIVEC"
+  "vcmpgtuw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpgtsw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 61))]
+  "TARGET_ALTIVEC"
+  "vcmpgtsw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vcmpgtfp"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SF 1 "register_operand" "v")
+                      (match_operand:V4SF 2 "register_operand" "v")] 62))]
+  "TARGET_ALTIVEC"
+  "vcmpgtfp\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmaxub"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 63))]
+  "TARGET_ALTIVEC"
+  "vmaxub\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmaxsb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 64))]
+  "TARGET_ALTIVEC"
+  "vmaxsb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmaxuh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 65))]
+  "TARGET_ALTIVEC"
+  "vmaxuh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmaxsh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 66))]
+  "TARGET_ALTIVEC"
+  "vmaxsh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmaxuw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 67))]
+  "TARGET_ALTIVEC"
+  "vmaxuw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmaxsw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 68))]
+  "TARGET_ALTIVEC"
+  "vmaxsw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmaxfp"
+  [(set (match_operand:V4SF 0 "register_operand" "=v")
+        (unspec:V4SF [(match_operand:V4SF 1 "register_operand" "v")
+                      (match_operand:V4SF 2 "register_operand" "v")] 69))]
+  "TARGET_ALTIVEC"
+  "vmaxfp\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmrghb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 70))]
+  "TARGET_ALTIVEC"
+  "vmrghb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmrghh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 71))]
+  "TARGET_ALTIVEC"
+  "vmrghh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmrghw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 72))]
+  "TARGET_ALTIVEC"
+  "vmrghw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmrglb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 73))]
+  "TARGET_ALTIVEC"
+  "vmrglb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmrglh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 74))]
+  "TARGET_ALTIVEC"
+  "vmrglh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmrglw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 75))]
+  "TARGET_ALTIVEC"
+  "vmrglw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vminub"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 76))]
+  "TARGET_ALTIVEC"
+  "vminub\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vminsb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 77))]
+  "TARGET_ALTIVEC"
+  "vminsb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vminuh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 78))]
+  "TARGET_ALTIVEC"
+  "vminuh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vminsh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 79))]
+  "TARGET_ALTIVEC"
+  "vminsh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vminuw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 80))]
+  "TARGET_ALTIVEC"
+  "vminuw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vminsw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 81))]
+  "TARGET_ALTIVEC"
+  "vminsw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vminfp"
+  [(set (match_operand:V4SF 0 "register_operand" "=v")
+        (unspec:V4SF [(match_operand:V4SF 1 "register_operand" "v")
+                      (match_operand:V4SF 2 "register_operand" "v")] 82))]
+  "TARGET_ALTIVEC"
+  "vminfp\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmuleub"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V16QI 1 "register_operand" "v")
+                      (match_operand:V16QI 2 "register_operand" "v")] 83))]
+  "TARGET_ALTIVEC"
+  "vmuleub\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmulesb"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V16QI 1 "register_operand" "v")
+                      (match_operand:V16QI 2 "register_operand" "v")] 84))]
+  "TARGET_ALTIVEC"
+  "vmulesb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmuleuh"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 85))]
+  "TARGET_ALTIVEC"
+  "vmuleuh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmulesh"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 86))]
+  "TARGET_ALTIVEC"
+  "vmulesh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmuloub"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V16QI 1 "register_operand" "v")
+                      (match_operand:V16QI 2 "register_operand" "v")] 87))]
+  "TARGET_ALTIVEC"
+  "vmuloub\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmulosb"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V16QI 1 "register_operand" "v")
+                      (match_operand:V16QI 2 "register_operand" "v")] 88))]
+  "TARGET_ALTIVEC"
+  "vmulosb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmulouh"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 89))]
+  "TARGET_ALTIVEC"
+  "vmulouh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vmulosh"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 90))]
+  "TARGET_ALTIVEC"
+  "vmulosh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vnor"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 91))]
+  "TARGET_ALTIVEC"
+  "vnor\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vor"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 92))]
+  "TARGET_ALTIVEC"
+  "vor\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkuhum"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V8HI 1 "register_operand" "v")
+                       (match_operand:V8HI 2 "register_operand" "v")] 93))]
+  "TARGET_ALTIVEC"
+  "vpkuhum\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkuwum"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 94))]
+  "TARGET_ALTIVEC"
+  "vpkuwum\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkpx"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 95))]
+  "TARGET_ALTIVEC"
+  "vpkpx\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkuhss"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V8HI 1 "register_operand" "v")
+                       (match_operand:V8HI 2 "register_operand" "v")] 96))]
+  "TARGET_ALTIVEC"
+  "vpkuhss\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkshss"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V8HI 1 "register_operand" "v")
+                       (match_operand:V8HI 2 "register_operand" "v")] 97))]
+  "TARGET_ALTIVEC"
+  "vpkshss\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkuwss"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 98))]
+  "TARGET_ALTIVEC"
+  "vpkuwss\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkswss"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 99))]
+  "TARGET_ALTIVEC"
+  "vpkswss\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkuhus"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V8HI 1 "register_operand" "v")
+                       (match_operand:V8HI 2 "register_operand" "v")] 100))]
+  "TARGET_ALTIVEC"
+  "vpkuhus\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkshus"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V8HI 1 "register_operand" "v")
+                       (match_operand:V8HI 2 "register_operand" "v")] 101))]
+  "TARGET_ALTIVEC"
+  "vpkshus\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkuwus"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 102))]
+  "TARGET_ALTIVEC"
+  "vpkuwus\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vpkswus"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 103))]
+  "TARGET_ALTIVEC"
+  "vpkswus\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vrlb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 104))]
+  "TARGET_ALTIVEC"
+  "vrlb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vrlh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 105))]
+  "TARGET_ALTIVEC"
+  "vrlh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vrlw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 106))]
+  "TARGET_ALTIVEC"
+  "vrlw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vslb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 107))]
+  "TARGET_ALTIVEC"
+  "vslb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vslh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 108))]
+  "TARGET_ALTIVEC"
+  "vslh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vslw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 109))]
+  "TARGET_ALTIVEC"
+  "vslw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsl"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 110))]
+  "TARGET_ALTIVEC"
+  "vsl\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vslo"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 111))]
+  "TARGET_ALTIVEC"
+  "vslo\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsrb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 112))]
+  "TARGET_ALTIVEC"
+  "vsrb\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vrsh"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 113))]
+  "TARGET_ALTIVEC"
+  "vrsh\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vrsw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 114))]
+  "TARGET_ALTIVEC"
+  "vrsw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsrab"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 115))]
+  "TARGET_ALTIVEC"
+  "vsrab\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsrah"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 116))]
+  "TARGET_ALTIVEC"
+  "vsrah\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsraw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 117))]
+  "TARGET_ALTIVEC"
+  "vsraw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsr"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 118))]
+  "TARGET_ALTIVEC"
+  "vsr\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsro"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 119))]
+  "TARGET_ALTIVEC"
+  "vsro\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsububm"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 120))]
+  "TARGET_ALTIVEC"
+  "vsububm\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubuhm"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 121))]
+  "TARGET_ALTIVEC"
+  "vsubuhm\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubuwm"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 122))]
+  "TARGET_ALTIVEC"
+  "vsubuwm\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubfp"
+  [(set (match_operand:V4SF 0 "register_operand" "=v")
+        (unspec:V4SF [(match_operand:V4SF 1 "register_operand" "v")
+                      (match_operand:V4SF 2 "register_operand" "v")] 123))]
+  "TARGET_ALTIVEC"
+  "vsubfp\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubcuw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 124))]
+  "TARGET_ALTIVEC"
+  "vsubcuw\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsububs"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 125))]
+  "TARGET_ALTIVEC"
+  "vsububs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubsbs"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:V16QI 2 "register_operand" "v")] 126))]
+  "TARGET_ALTIVEC"
+  "vsubsbs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubuhs"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 127))]
+  "TARGET_ALTIVEC"
+  "vsubuhs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubshs"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V8HI 2 "register_operand" "v")] 128))]
+  "TARGET_ALTIVEC"
+  "vsubshs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubuws"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 129))]
+  "TARGET_ALTIVEC"
+  "vsubuws\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsubsws"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 130))]
+  "TARGET_ALTIVEC"
+  "vsubsws\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsum4ubs"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V16QI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 131))]
+  "TARGET_ALTIVEC"
+  "vsum4ubs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsum4sbs"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V16QI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 132))]
+  "TARGET_ALTIVEC"
+  "vsum4sbs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsum4shs"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 133))]
+  "TARGET_ALTIVEC"
+  "vsum4shs\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsum2sws"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 134))]
+  "TARGET_ALTIVEC"
+  "vsum2sws\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vsumsws"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 135))]
+  "TARGET_ALTIVEC"
+  "vsumsws\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
+
+(define_insn "altivec_vxor"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:V4SI 2 "register_operand" "v")] 136))]
+  "TARGET_ALTIVEC"
+  "vxor\t%0,%1,%2"
+  [(set_attr "type" "altivec")])
