2001-11-07  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* parse.y (patch_assignment): Removed unused third argument.
	(java_complete_lhs): Removed unused third argument to patch_assignment.

( http://gcc.gnu.org/ml/gcc-patches/2001-11/msg00469.html )


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46834 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-07  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* parse.y (patch_assignment): Removed unused third argument.
+	(java_complete_lhs): Removed unused third argument to patch_assignment.
+
 2001-11-06  Neil Booth  <neil@cat.daikokuya.demon.co.uk>
 
 	* lang.c: Include langhooks-def.h.
